1998-10-12  Samuel Tardieu  <sam@inf.enst.fr>

	* support/ada.m4: Use AC_CHECK_PROGS when choosing between
	alternatives. Correct bug reported by Pascal Obry.

1998-10-10  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Remove old reference to 2.01 that is no longer justified.

1998-10-07  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Remove mention of Windows NT launch.

1998-10-06  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Mention Windows NT visible changes and bug fixes.

1998-10-05  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Substitute PSNAME so that it can be used by the
 	runtime.

1998-09-24  Samuel Tardieu  <sam@inf.enst.fr>

	* support/ada.m4: Detect gnatgcc as a suitable Ada driver since
	that is what the Debian distribution use.

1998-09-12  Laurent Pautet  <pautet@scapin.enst.fr>

        * configure.in, configure: Fix 5712-G01. Specific naming
	of a decalpha platform.
	
1998-09-02  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add missing Examples/Filters/Makefile.am.

1998-09-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: To build isthriob, don't compile s-stratt.adb
 	anymore and bind with flag -t to ignore stamp inconsistency.
        Don't care about inlining and stamp inconsistency since this
        executable is supposed to check whether IO are thread blocking or
        not. This should be fast because it is done during configuration.

1998-09-02  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add missing Examples/Filters/Makefile.am.
	Add Garlic/s-ganase.ad[bs] to the distribution.
	Add Garlic/s-gapise.ad[bs] to the distribution.

	* configure.in (ISTHRBIO): Use a reliable method that works with
	GNAT-inlined/GLADE-not-inlined, GNAT-not-inlined/GLADE-inlined,
	both-inlined or both-non-inlined.

1998-09-01  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Remove Examples/Filters/localhost as it will not work
	under Windows.

	* configure.in: isthrbio may need s-stratt.{o,ali} in some