@@ -182,6 +182,8 @@ Garlic/s-garela.adb
 Garlic/s-garela.ads
 Garlic/s-garexc.adb
 Garlic/s-garexc.ads
+Garlic/s-gargro.adb
+Garlic/s-gargro.ads
 Garlic/s-garhea.adb
 Garlic/s-garhea.ads
 Garlic/s-garlic.ads
