@@ -1,3 +1,7 @@
+1998-10-14  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* MANIFEST: Add s-gargro.ads and s-gargro.adb in source set.
+
 1998-10-12  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* support/ada.m4: Use AC_CHECK_PROGS when choosing between
